--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,11 +1,16 @@
 .container {
-
+    padding: 60px 0;
 }
 
 .row {
-
+    width: 1000px;
+    margin: 0 calc((100% - 1000px) / 2);
+    background-color: yellow;
 }
 
-.row.short {
-    
+.row-short {
+    width: 600px;
+    margin: 0 calc((100% - 600px) / 2);
+    background-color: blueviolet;
 }
+
