--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -5,12 +5,42 @@
 .row {
     width: 1000px;
     margin: 0 calc((100% - 1000px) / 2);
-    background-color: yellow;
 }
 
 .row-short {
     width: 600px;
     margin: 0 calc((100% - 600px) / 2);
-    background-color: blueviolet;
 }
 
+@media (max-width: 1100px) {
+    .row {
+        width: 800px;
+        margin: 0 calc((100% - 800px) / 2);
+    }
+}
+
+@media (max-width: 900px) {
+    .row {
+        width: 600px;
+        margin: 0 calc((100% - 600px) / 2);
+    }
+}
+
+@media (max-width: 700px) {
+    .row,
+    .row-short {
+        width: 400px;
+        margin: 0 calc((100% - 400px) / 2);
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        padding: 40px 15px;
+    }
+    .row,
+    .row-short {
+        width: 200px;
+        margin: 0 calc((100% - 200px) / 2);
+    }
+}
