--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -3,6 +3,7 @@
 }
 
 .row {
+    display: inline-block;
     width: 1000px;
     margin: 0 calc((100% - 1000px) / 2);
 }
@@ -10,6 +11,16 @@
 .row-short {
     width: 600px;
     margin: 0 calc((100% - 600px) / 2);
+}
+
+.column {
+    width: 50%;
+    float: left;
+}
+
+.column-right {
+    width: 40%;
+    margin-left: 10%;
 }
 
 @media (max-width: 1100px) {
@@ -24,6 +35,10 @@
         width: 600px;
         margin: 0 calc((100% - 600px) / 2);
     }
+    .column {
+        width: 100%;
+        margin: 0;
+    }
 }
 
 @media (max-width: 700px) {
@@ -31,6 +46,9 @@
     .row-short {
         width: 400px;
         margin: 0 calc((100% - 400px) / 2);
+    }
+    .column {
+        width: 100%;
     }
 }
 
