--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -14,6 +14,7 @@
     background-repeat: no-repeat;
     background-position: bottom center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .hero > .row-short {
