--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -3,7 +3,8 @@
 @import '../base/layout.css';
 
 /*vendor*/
-
+@import '../vendors/font-awesome.min.css';
+@import '../vendors/roboto.css';
 /*components*/
 @import '../componenst/button.css';
 
@@ -31,6 +32,8 @@
 }
 
 .main-title {
+    font-family: Roboto;
+    font-weight: bold;
     font-size: 70px;
     text-align: center;
     text-transform: uppercase;
@@ -63,4 +66,8 @@
 .column-description > a:hover {
     text-decoration: underline;
 
+}
+
+footer > .row {
+    border-bottom: 1px solid #fff;
 }
