--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -46,6 +46,34 @@
     font-size: 20px;
 }
 
+footer.container{
+    padding-top: 0;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    padding: 0.5em 0; 
+    gap: 20px;
+    gap: 1em;
+    border-bottom: 1px solid #fff;
+}
+
+.socials > a {
+    width: 3em;
+    height: 3em;
+    line-height: 3em;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+}
+
+.socials > a:hover {
+    border-radius: 50%;
+    background-color: #fff;
+    color: var(--main-color)
+}
+
 .column-title {
     font-size: 20px;
     text-transform: uppercase;
