--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -7,6 +7,7 @@
 @import '../vendors/roboto.css';
 /*components*/
 @import '../componenst/button.css';
+@import '../componenst/clock.css';
 
 /*CUSTOM CSS*/
 .hero {
