--- a/css/componenst/progress-bar.css
+++ b/css/componenst/progress-bar.css
@@ -23,7 +23,7 @@
     background-color: #ccc;
 }
 .progress-bar-group .progress{
-    width: 90%;
+    width: var(--width);
     height: var(--height);
     background-color: #36F;
 }
