--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -103,3 +103,49 @@ footer.container{
 footer > .row {
     border-bottom: 1px solid #fff;
 }
+
+footer .logo {
+    margin: 40px 0;
+}
+
+.text-trio {
+    text-align: center;
+    color: rgba(255, 255,255, 0.6);
+}
+.text-trio > span {
+
+}
+.text-trio > span > a {
+
+}
+
+.text-trio > .line {
+    display: inline-block;
+    background-color: #fff;
+    width: 2px;
+    height: 12px;
+    margin: 0 5px;
+}
+
+.footer-bottom {
+    text-align: center;
+    color: rgba(255, 255,255, 0.6);
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 700px) {
+    .text-trio > span {
+        display: block;
+    }
+    .text-trio > .line {
+        display: none;
+    }
+}
