--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -75,7 +75,8 @@ footer.container{
 .socials > a:hover {
     border-radius: 50%;
     background-color: #fff;
-    color: var(--main-color)
+    color: var(--main-color);
+    text-decoration: none;
 }
 
 .column-title {
